adding language parameter

--- a/dpr/language/dpr_lang.json
+++ b/dpr/language/dpr_lang.json
@@ -208,6 +208,7 @@
     },
 
     "english" :{
+    "english_title":"Detailed Project Report",
     "section_a_english":{
     "section_a_heading":"Section A : Team Details",
     "section_a_brief":"This section gives brief information about the Project Name, facilitator details responsible for the preparation of the Detailed Project Report (DPR). The process begins with Participatory Rural Appraisal (PRA), involving active engagement with community members to identify their needs and resources.",
