--- a/computing/STAC_specs/notebooks/run_final_flow.ipynb
+++ b/computing/STAC_specs/notebooks/run_final_flow.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "facf318f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install pystac"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "a31b9fe0",
    "metadata": {},
    "outputs": [],
@@ -43,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "17aa8033",
    "metadata": {},
    "outputs": [],
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "58b30447",
    "metadata": {},
    "outputs": [],
@@ -67,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7b3fa71e",
    "metadata": {},
    "outputs": [
@@ -88,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "71c24ed0",
    "metadata": {},
    "outputs": [
@@ -105,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/nirzaree/Code/GitClones/STAC-spec/notebooks/generate_STAC_layerwise.py:749: SettingWithCopyWarning: \n",
+      "/home/nirzaree/Code/GitClones/core-stack-org/core-stack-backend/computing/STAC_specs/notebooks/../generate_STAC_layerwise.py:742: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -119,8 +129,10 @@
       "Warning: Single symbol color not found in ../data/input/style_files/Administrative-Boundary-Style.qml.\n",
       "Applying default style due to parsing error.\n",
       "Thumbnail saved to: ../data/STAC_output_prod/badlapur_admin_boundaries_vector.png\n",
-      "Loaded existing block catalog: badlapur\n",
-      "Removed previously existing uttar_pradesh_jaunpur_badlapur_admin_boundaries_vector from the catalog\n"
+      "created block catalog\n",
+      "created district catalog\n",
+      "created state collection\n",
+      "created root catalog\n"
      ]
     }
    ],
@@ -136,8 +148,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "f0019dc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "geoserver_workspace_name=canopy_height\n",
+      "geoserver_layer_name=tree_health_ch_raster_jaunpur_badlapur_2019\n",
+      "style file url = https://raw.githubusercontent.com/core-stack-org/QGIS-Styles/main/Tree%20Health/tree_cover_change.qml\n",
+      "Raster URL: https://geoserver.core-stack.org:8443/geoserver/canopy_height/wcs?service=WCS&version=2.0.1&request=GetCoverage&CoverageId=canopy_height:tree_health_ch_raster_jaunpur_badlapur_2019&format=geotiff\n",
+      "start_date = 2019-07-01 00:00:00\n",
+      "end_date = 2020-06-30 00:00:00\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nirzaree/miniconda3/envs/black/lib/python3.10/site-packages/urllib3/connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'geoserver.core-stack.org'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded existing block catalog: badlapur\n"
+     ]
+    }
+   ],
+   "source": [
+    "generate_STAC_layerwise.generate_raster_stac(state=state,\n",
+    "                     district=district,\n",
+    "                     block=block,\n",
+    "                     layer_name='tree_canopy_height_raster',\n",
+    "                     layer_map_csv_path='../data/layer_mapping.csv',\n",
+    "                     layer_desc_csv_path='../data/layer_descriptions.csv',\n",
+    "                     start_year='2019'\n",
+    "                     )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5bf678f1",
+   "id": "d7f3c13b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -145,7 +202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".stac",
+   "display_name": "black",
    "language": "python",
    "name": "python3"
   },
@@ -159,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
