updating after organizing the csvs in the folder

--- a/computing/STAC_specs/notebooks/run_final_flow.ipynb
+++ b/computing/STAC_specs/notebooks/run_final_flow.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "71c24ed0",
    "metadata": {},
    "outputs": [
@@ -124,16 +124,16 @@
     "generate_STAC_layerwise.generate_vector_stac(state=state,\n",
     "                     district=district,\n",
     "                     block=block,\n",
-    "                     layer_name='admin_boundaries_vector',\n",
-    "                    #  layer_map_csv_path='../data/layer_mapping.csv',\n",
-    "                    #  layer_desc_csv_path='../data/layer_descriptions.csv',\n",
-    "                    #  column_desc_csv_path='../data/vector_column_descriptions.csv'\n",
-    "                    )"
+    "                     layer_name='drainage_lines_vector',\n",
+    "                    #  layer_map_csv_path='../data/input/metadata/layer_mapping.csv',\n",
+    "                    #  layer_desc_csv_path='../data/input/metadata/layer_descriptions.csv',\n",
+    "                    #  column_desc_csv_path='../data/input/metadata/vector_column_descriptions.csv'\n",
+    "                     )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5bf678f1",
    "metadata": {},
    "outputs": [
@@ -169,16 +169,23 @@
     }
    ],
    "source": [
-    "generate_STAC_layerwise.generate_raster_stac(state=state,\n",
+    "generate_raster_stac(state=state,\n",
     "                     district=district,\n",
     "                     block=block,\n",
-    "                     layer_name='land_use_land_cover_raster',\n",
-    "                    #  layer_map_csv_path='../data/layer_mapping.csv',\n",
-    "                    #  layer_desc_csv_path='../data/layer_descriptions.csv',\n",
-    "                     start_year='2020',\n",
-    "                     end_year='2021'\n",
-    "                   )"
+    "                     layer_name='tree_canopy_height_raster',\n",
+    "                    #  layer_map_csv_path='../data/input/metadata/layer_mapping.csv',\n",
+    "                    #  layer_desc_csv_path='../data/input/metadata/layer_descriptions.csv',\n",
+    "                     start_year='2019'\n",
+    "                     )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c1637a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
