--- a/computing/STAC_specs/notebooks/run_final_flow.ipynb
+++ b/computing/STAC_specs/notebooks/run_final_flow.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "71c24ed0",
    "metadata": {},
    "outputs": [
@@ -96,27 +96,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/layer_mapping.csv\n",
-      "../data/layer_descriptions.csv\n",
-      "../data/vector_column_descriptions.csv\n",
-      "geoserver_workspace_name=panchayat_boundaries\n",
+      "../data/input/metadata/layer_mapping.csv\n",
+      "../data/input/metadata/layer_descriptions.csv\n",
+      "../data/input/metadata/vector_column_descriptions.csv\n",
+      "geoserver_workspace_name=drainage\n",
       "geoserver_layer_name=koraput_koraput\n",
-      "style file url = https://raw.githubusercontent.com/core-stack-org/QGIS-Styles/main/Demographic/Administrative-Boundary-Style.qml\n",
-      "Warning: Single symbol color not found in ../data/input/style_files/Administrative-Boundary-Style.qml.\n",
-      "Applying default style due to parsing error.\n",
-      "Thumbnail saved to: ../data/STAC_output_prod/koraput_admin_boundaries_vector.png\n",
-      "Loaded existing block catalog: koraput\n"
+      "style file url = https://raw.githubusercontent.com/core-stack-org/QGIS-Styles/main/Hydrology/Drainage-Layer-Style.qml\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/nirzaree/Code/GitClones/STAC-spec/notebooks/generate_STAC_layerwise.py:760: SettingWithCopyWarning: \n",
+      "/home/nirzaree/Code/GitClones/core-stack-org/core-stack-backend/computing/STAC_specs/notebooks/../generate_STAC_layerwise.py:780: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  vector_column_desc_filtered_gdf.rename({'column_name_description':'column_description'},axis=1,inplace=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Applying categorized style...\n",
+      "Thumbnail saved to: ../data/STAC_output_prod/koraput_drainage_lines_vector.png\n",
+      "created block catalog\n",
+      "created district catalog\n",
+      "created state collection\n",
+      "loaded root catalog\n"
      ]
     }
    ],
@@ -133,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5bf678f1",
    "metadata": {},
    "outputs": [
@@ -141,19 +149,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "geoserver_workspace_name=LULC_level_3\n",
-      "geoserver_layer_name=LULC_20_21_koraput_level_3\n",
-      "style file url = https://raw.githubusercontent.com/core-stack-org/QGIS-Styles/main/Land/LULC0_12class.qml\n",
-      "Raster URL: https://geoserver.core-stack.org:8443/geoserver/LULC_level_3/wcs?service=WCS&version=2.0.1&request=GetCoverage&CoverageId=LULC_level_3:LULC_20_21_koraput_level_3&format=geotiff\n",
-      "start_date = 2020-07-01 00:00:00\n",
-      "end_date = 2021-06-30 00:00:00\n"
+      "geoserver_workspace_name=canopy_height\n",
+      "geoserver_layer_name=tree_health_ch_raster_koraput_koraput_2019\n",
+      "style file url = https://raw.githubusercontent.com/core-stack-org/QGIS-Styles/main/Tree%20Health/tree_cover_change.qml\n",
+      "Raster URL: https://geoserver.core-stack.org:8443/geoserver/canopy_height/wcs?service=WCS&version=2.0.1&request=GetCoverage&CoverageId=canopy_height:tree_health_ch_raster_koraput_koraput_2019&format=geotiff\n",
+      "start_date = 2019-07-01 00:00:00\n",
+      "end_date = 2020-06-30 00:00:00\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/nirzaree/miniconda3/envs/.stac/lib/python3.13/site-packages/urllib3/connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'geoserver.core-stack.org'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "/home/nirzaree/miniconda3/envs/black/lib/python3.10/site-packages/urllib3/connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'geoserver.core-stack.org'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
       "  warnings.warn(\n"
      ]
     },
@@ -161,15 +169,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "created block catalog\n",
-      "created district catalog\n",
-      "created state collection\n",
-      "loaded root catalog\n"
+      "Loaded existing block catalog: koraput\n"
      ]
     }
    ],
    "source": [
-    "generate_raster_stac(state=state,\n",
+    "generate_STAC_layerwise.generate_raster_stac(state=state,\n",
     "                     district=district,\n",
     "                     block=block,\n",
     "                     layer_name='tree_canopy_height_raster',\n",
@@ -189,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8533b0e8",
    "metadata": {},
    "outputs": [],
@@ -213,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a6c987ef",
    "metadata": {},
    "outputs": [],
@@ -237,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7ae2d740",
    "metadata": {},
    "outputs": [],
@@ -261,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8cf78b8a",
    "metadata": {},
    "outputs": [],
@@ -285,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0dd3c72a",
    "metadata": {},
    "outputs": [],
@@ -309,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "17466699",
    "metadata": {},
    "outputs": [],
@@ -333,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "cfd8a2c7",
    "metadata": {},
    "outputs": [],
@@ -357,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "76c820fd",
    "metadata": {},
    "outputs": [],
@@ -381,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b98ff68f",
    "metadata": {},
    "outputs": [],
@@ -405,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "92597672",
    "metadata": {},
    "outputs": [],
@@ -429,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "dcd03efd",
    "metadata": {},
    "outputs": [],
@@ -453,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "6a6ce6fb",
    "metadata": {},
    "outputs": [],
@@ -478,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "97b0bed6",
    "metadata": {},
    "outputs": [],
@@ -503,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "448d26b7",
    "metadata": {},
    "outputs": [],
@@ -528,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b3df9d06",
    "metadata": {},
    "outputs": [],
@@ -553,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "961574d2",
    "metadata": {},
    "outputs": [],
@@ -578,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "a7946d78",
    "metadata": {},
    "outputs": [],
@@ -603,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "e868fe81",
    "metadata": {},
    "outputs": [],
@@ -636,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "f1c0e674",
    "metadata": {},
    "outputs": [],
@@ -661,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "aa451837",
    "metadata": {},
    "outputs": [],
@@ -686,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "00df75a0",
    "metadata": {},
    "outputs": [],
@@ -711,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "8a004f04",
    "metadata": {},
    "outputs": [],
@@ -736,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "f21f4b29",
    "metadata": {},
    "outputs": [],
@@ -761,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "f7a4fb19",
    "metadata": {},
    "outputs": [],
@@ -793,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "69828150",
    "metadata": {},
    "outputs": [],
@@ -818,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "6f0dd21e",
    "metadata": {},
    "outputs": [],
@@ -843,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "aaf30122",
    "metadata": {},
    "outputs": [],
@@ -868,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "7ff1487e",
    "metadata": {},
    "outputs": [],
@@ -893,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "85be63a8",
    "metadata": {},
    "outputs": [],
@@ -918,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "dece739b",
    "metadata": {},
    "outputs": [],
@@ -951,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "ef1ae1be",
    "metadata": {},
    "outputs": [],
@@ -964,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "f47148fe",
    "metadata": {},
    "outputs": [],
@@ -988,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "a98e3f0b",
    "metadata": {},
    "outputs": [],
@@ -1012,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "21a347a2",
    "metadata": {},
    "outputs": [],
@@ -1036,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "63baa118",
    "metadata": {},
    "outputs": [],
@@ -1060,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "6f72b747",
    "metadata": {},
    "outputs": [],
@@ -1084,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "5392fa2b",
    "metadata": {},
    "outputs": [],
@@ -1108,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "85d53bf6",
    "metadata": {},
    "outputs": [],
@@ -1132,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "ada6700b",
    "metadata": {},
    "outputs": [],
@@ -1156,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "2955840c",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "183c3fdf",
    "metadata": {},
    "outputs": [],
@@ -1188,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "f50a7932",
    "metadata": {},
    "outputs": [],
@@ -1204,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "cb86a3ec",
    "metadata": {},
    "outputs": [],
@@ -1222,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "ee8dd72a",
    "metadata": {},
    "outputs": [],
@@ -1246,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "9631285b",
    "metadata": {},
    "outputs": [],
@@ -1256,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "cb549ef8",
    "metadata": {},
    "outputs": [],
@@ -1266,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "e814db97",
    "metadata": {},
    "outputs": [],
@@ -1276,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "f3ff6fd9",
    "metadata": {},
    "outputs": [],
@@ -1286,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "1ec9206b",
    "metadata": {},
    "outputs": [],
@@ -1297,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "ed6ec1ca",
    "metadata": {},
    "outputs": [],
@@ -1307,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "5efbc7f3",
    "metadata": {},
    "outputs": [],
@@ -1317,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "6078f4ec",
    "metadata": {},
    "outputs": [],
@@ -1332,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "6eb39f55",
    "metadata": {},
    "outputs": [],
@@ -1342,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "8a2db0aa",
    "metadata": {},
    "outputs": [],
@@ -1362,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "60075194",
    "metadata": {},
    "outputs": [],
@@ -1372,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "8ea40652",
    "metadata": {},
    "outputs": [],
@@ -1387,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "91747424",
    "metadata": {},
    "outputs": [],
@@ -1407,7 +1412,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".stac",
+   "display_name": "black",
    "language": "python",
    "name": "python3"
   },
@@ -1421,7 +1426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
