--- a/dpr/language/english.json
+++ b/dpr/language/english.json
@@ -17,6 +17,7 @@
     "section_b_table1_row3_3": "State",
     "section_b_table1_row4_1": "Number of Settlements in the village",
     "section_b_table1_row5_1": "Latitude & Longitude of Village",
+    "section_b_table1_last_heading": "Intersecting Micro Watershed IDs",
 
     "section_c_heading": "Section C: Social Economic_ Ecological Profile",
     "section_c_brief": "This section  includes information on vulnerabilities, NREGA details, livelihoods, and crop and livestock profiles.",
