--- a/dpr/language/hindi.json
+++ b/dpr/language/hindi.json
@@ -18,6 +18,7 @@
     "section_b_table1_row3_3": "राज्य",
     "section_b_table1_row4_1": "गाँव में बस्तियों की संख्या",
     "section_b_table1_row5_1": "गाँव का अक्षांश और देशांतर",
+    "section_b_table1_last_heading": "अंतरवर्ती लघु जलाशय आईडी",
 
 
     "section_c_heading": "अनुभाग सी: सामाजिक-आर्थिक एवं पारिस्थितिक प्रोफ़ाइल",
