updating the notebooks on the backend wrt exception handlign

--- a/computing/STAC_specs/notebooks/final_flow.ipynb
+++ b/computing/STAC_specs/notebooks/final_flow.ipynb
@@ -88,16 +88,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "14ac1a7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RASTER_STYLE_PATH = '../data/LULC0_12class.qml'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "4b58b4fc",
    "metadata": {},
    "outputs": [],
@@ -107,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ca8d0502",
    "metadata": {},
    "outputs": [],
@@ -117,26 +107,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "73be265f",
    "metadata": {},
    "outputs": [],
    "source": [
     "THUMBNAIL_DIR = os.path.join(LOCAL_DATA_DIR,\n",
-    "                             'STAC_output_prod')\n",
+    "                             'STAC_output_exception_handling')\n",
     "# THUMBNAIL_DIR\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c24c9358",
    "metadata": {},
    "outputs": [],
    "source": [
     "STAC_FILES_DIR = os.path.join(\n",
     "    LOCAL_DATA_DIR,\n",
-    "    'CorestackCatalogs_prod' #test folder\n",
+    "    'CorestackCatalogs_exception_handling' #test folder\n",
     ")\n",
     "\n",
     "# STAC_FILES_DIR = 's3://spatio-temporal-asset-catalog/CorestackCatalogs_prod'\n",
@@ -146,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "5eddceee",
    "metadata": {},
    "outputs": [],
@@ -157,13 +147,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "340b7693",
    "metadata": {},
    "outputs": [],
    "source": [
     "VECTOR_COLUMN_DESC_GITHUB_URL = constants.VECTOR_COLUMN_DESC_GITHUB_URL\n",
     "# VECTOR_COLUMN_DESC_GITHUB_URL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "19bb31da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer_STAC_generated = False #output flag"
    ]
   },
   {
@@ -230,7 +230,14 @@
     "\n",
     "    #when reading from geoserver\n",
     "    response = requests.get(raster_url, verify=False)\n",
-    "    response.raise_for_status()\n",
+    "\n",
+    "    #exception handling: scenario 1: when fetching data from geoserver\n",
+    "    try:\n",
+    "        response.raise_for_status()\n",
+    "    except requests.exceptions.HTTPError as e:\n",
+    "        # Whoops it wasn't a 200\n",
+    "        return \"Error: \" + str(e) + \"when fetching data from geoserver for STAC generation\"\n",
+    "\n",
     "    raster_data = BytesIO(response.content)\n",
     "\n",
     "    #read the data and fetch the metadata\n",
@@ -379,8 +386,12 @@
     "    if not os.path.exists(style_file_local_path):\n",
     "            #TODO: try statement\n",
     "            os.makedirs(os.path.dirname(style_file_local_path), exist_ok=True)\n",
-    "            urllib.request.urlretrieve(style_file_url,\n",
-    "                                       style_file_local_path)       \n",
+    "            try:\n",
+    "                urllib.request.urlretrieve(style_file_url,\n",
+    "                                           style_file_local_path)  \n",
+    "            #exception handling: scenario 2: when fetching style file from github\n",
+    "            except Exception as e:\n",
+    "                print(\"Could not retrieve style file from github. Error: \" + str(e))\n",
     "    \n",
     "    tree = ET.parse(style_file_local_path)\n",
     "    root = tree.getroot()\n",
@@ -595,10 +606,10 @@
     "                         district,\n",
     "                         block,\n",
     "                         layer_name,\n",
-    "                         layer_map_csv_path='../data/layer_mapping.csv',\n",
-    "                         layer_desc_csv_path='../data/layer_descriptions.csv',\n",
-    "                         start_year='',\n",
-    "                         end_year=''\n",
+    "                         layer_map_csv_path,\n",
+    "                         layer_desc_csv_path,\n",
+    "                         start_year,\n",
+    "                         end_year\n",
     "                         ):    \n",
     "    \n",
     "    #1. read layer description\n",
@@ -880,7 +891,8 @@
     "        print(\"created root catalog\")\n",
     "    root_catalog.add_child(state_collection)\n",
     "    root_catalog.normalize_and_save(STAC_FILES_DIR, catalog_type=pystac.CatalogType.SELF_CONTAINED)\n",
-    "    return"
+    "    layer_STAC_generated = True \n",
+    "    return layer_STAC_generated"
    ]
   },
   {
@@ -928,14 +940,17 @@
     "def read_vector_data(vector_url,\n",
     "                     target_crs='4326'\n",
     "                     ):\n",
-    "    vector_gdf = gpd.read_file(vector_url)\n",
+    "    try:\n",
+    "        vector_gdf = gpd.read_file(vector_url)\n",
+    "    except Exception as e:\n",
+    "        print(\"Could not fetch vector data from url. Error: \" + str(e))\n",
+    "\n",
     "    vector_gdf = vector_gdf.to_crs(epsg=target_crs)\n",
     "    #TODO: remove such constants like here in crs. make it standard. available in constants. \n",
     "    bounds = vector_gdf.total_bounds\n",
     "    bbox = [float(b) for b in bounds] #footprint also in vector\n",
-    "    geom = mapping(vector_gdf.union_all())\n",
-    "    \n",
-    "    return (vector_gdf,bounds,bbox,geom)"
+    "    geom = mapping(vector_gdf.union_all())    \n",
+    "    return (vector_gdf,bounds,bbox,geom)\n"
    ]
   },
   {
@@ -1109,8 +1124,11 @@
     "    if not os.path.exists(style_file_local_path):\n",
     "            #TODO: try statement\n",
     "            os.makedirs(os.path.dirname(style_file_local_path), exist_ok=True)\n",
-    "            urllib.request.urlretrieve(style_file_url,\n",
-    "                                       style_file_local_path)       \n",
+    "            try:\n",
+    "                urllib.request.urlretrieve(style_file_url,\n",
+    "                                           style_file_local_path)\n",
+    "            except Exception as e:\n",
+    "                print(\"Could not retrieve style file from url. Error: \" + str(e))\n",
     "    \n",
     "    try:\n",
     "        tree = ET.parse(style_file_local_path)\n",
@@ -1462,10 +1480,13 @@
     "                                       layer_map_csv_path,\n",
     "                                       layer_desc_csv_path,\n",
     "                                       column_desc_csv_path)\n",
-    "    update_STAC_files(state,\n",
-    "                      district,\n",
-    "                      block,\n",
-    "                      STAC_item=vector_item)"
+    "    \n",
+    "    layer_STAC_generated = update_STAC_files(state,\n",
+    "                                             district,\n",
+    "                                             block,\n",
+    "                                             STAC_item=vector_item)\n",
+    "    \n",
+    "    return layer_STAC_generated"
    ]
   },
   {
@@ -1493,11 +1514,13 @@
     "                                       start_year,\n",
     "                                       end_year)\n",
     "    \n",
-    "    update_STAC_files(state,\n",
-    "                      district,\n",
-    "                      block,\n",
-    "                      STAC_item=raster_item\n",
-    "                      )"
+    "    layer_STAC_generated = update_STAC_files(state,\n",
+    "                                             district,\n",
+    "                                             block,\n",
+    "                                             STAC_item=raster_item)\n",
+    "    \n",
+    "    return layer_STAC_generated\n",
+    "    \n"
    ]
   },
   {
@@ -1510,10 +1533,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "de17af36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>block</th>\n",
+       "      <th>district</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gobindpur</td>\n",
+       "      <td>saraikela-kharsawan</td>\n",
+       "      <td>jharkhand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>mirzapur</td>\n",
+       "      <td>mirzapur</td>\n",
+       "      <td>uttar_pradesh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>koraput</td>\n",
+       "      <td>koraput</td>\n",
+       "      <td>odisha</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>badlapur</td>\n",
+       "      <td>jaunpur</td>\n",
+       "      <td>uttar_pradesh</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       block             district          state\n",
+       "0  gobindpur  saraikela-kharsawan      jharkhand\n",
+       "1   mirzapur             mirzapur  uttar_pradesh\n",
+       "2    koraput              koraput         odisha\n",
+       "3   badlapur              jaunpur  uttar_pradesh"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# block_district_state_df = pd.DataFrame({\n",
     "#     'block' : ['gobindpur','mirzapur','koraput','badlapur'],\n",
@@ -1526,10 +1617,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "f34a727e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uttar_pradesh jaunpur badlapur\n"
+     ]
+    }
+   ],
    "source": [
     "# block = 'badlapur'\n",
     "# district = block_district_state_df[block_district_state_df['block'] == block]['district'].iloc[0]\n",
@@ -1573,10 +1672,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "f9608496",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "geoserver_workspace_name=canopy_height\n",
+      "geoserver_layer_name=tree_health_ch_raster_jaunpur_badlapur_2021\n",
+      "style file url = https://raw.githubusercontent.com/core-stack-org/QGIS-Styles/main/Tree%20Health/tree_cover_change.qml\n",
+      "Raster URL: https://geoserver.core-stack.org:8443/geoserver/canopy_height/wcs?service=WCS&version=2.0.1&request=GetCoverage&CoverageId=canopy_height:tree_health_ch_raster_jaunpur_badlapur_2021&format=geotiff\n",
+      "start_date = 2021-07-01 00:00:00\n",
+      "end_date = 2022-06-30 00:00:00\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nirzaree/miniconda3/envs/.stac/lib/python3.13/site-packages/urllib3/connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'geoserver.core-stack.org'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "created block catalog\n",
+      "created district catalog\n",
+      "created state collection\n",
+      "created root catalog\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# generate_raster_stac(state=state,\n",
     "#                      district=district,\n",
@@ -1584,7 +1724,7 @@
     "#                      layer_name='tree_canopy_height_raster',\n",
     "#                     #  layer_map_csv_path='../data/input/metadata/layer_mapping.csv',\n",
     "#                     #  layer_desc_csv_path='../data/input/metadata/layer_descriptions.csv',\n",
-    "#                      start_year='2019'\n",
+    "#                      start_year='2021'\n",
     "#                      )"
    ]
   }
