--- a/computing/STAC_specs/notebooks/run_final_flow.ipynb
+++ b/computing/STAC_specs/notebooks/run_final_flow.ipynb
@@ -108,7 +108,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/nirzaree/Code/GitClones/core-stack-org/core-stack-backend/computing/STAC_specs/notebooks/../generate_STAC_layerwise.py:780: SettingWithCopyWarning: \n",
+      "/home/nirzaree/miniconda3/envs/.stac/lib/python3.13/site-packages/pyogrio/raw.py:198: RuntimeWarning: Several features with id = 111 have been found. Altering it to be unique. This warning will not be emitted anymore for this layer\n",
+      "  return ogr_read(\n",
+      "/home/nirzaree/Code/GitClones/STAC-spec/notebooks/generate_STAC_layerwise.py:796: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -120,12 +122,22 @@
      "output_type": "stream",
      "text": [
       "Applying categorized style...\n",
-      "Thumbnail saved to: ../data/STAC_output_prod/koraput_drainage_lines_vector.png\n",
+      "Thumbnail saved to: ../data/STAC_output_exception_handling/koraput_drainage_lines_vector.png\n",
       "created block catalog\n",
       "created district catalog\n",
       "created state collection\n",
       "loaded root catalog\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -141,40 +153,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "ac6c0dd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_STAC_layerwise.generate_vector_stac(state=state,\n",
+    "                     district=district,\n",
+    "                     block=block,\n",
+    "                     layer_name='admin_boundaries_vector',\n",
+    "                    #  layer_map_csv_path='../data/input/metadata/layer_mapping.csv',\n",
+    "                    #  layer_desc_csv_path='../data/input/metadata/layer_descriptions.csv',\n",
+    "                    #  column_desc_csv_path='../data/input/metadata/vector_column_descriptions.csv'\n",
+    "                     )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5bf678f1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "geoserver_workspace_name=canopy_height\n",
-      "geoserver_layer_name=tree_health_ch_raster_koraput_koraput_2019\n",
-      "style file url = https://raw.githubusercontent.com/core-stack-org/QGIS-Styles/main/Tree%20Health/tree_cover_change.qml\n",
-      "Raster URL: https://geoserver.core-stack.org:8443/geoserver/canopy_height/wcs?service=WCS&version=2.0.1&request=GetCoverage&CoverageId=canopy_height:tree_health_ch_raster_koraput_koraput_2019&format=geotiff\n",
-      "start_date = 2019-07-01 00:00:00\n",
-      "end_date = 2020-06-30 00:00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nirzaree/miniconda3/envs/black/lib/python3.10/site-packages/urllib3/connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'geoserver.core-stack.org'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded existing block catalog: koraput\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "generate_STAC_layerwise.generate_raster_stac(state=state,\n",
+    "generate_raster_stac(state=state,\n",
     "                     district=district,\n",
     "                     block=block,\n",
     "                     layer_name='tree_canopy_height_raster',\n",
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8533b0e8",
    "metadata": {},
    "outputs": [],
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a6c987ef",
    "metadata": {},
    "outputs": [],
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7ae2d740",
    "metadata": {},
    "outputs": [],
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "8cf78b8a",
    "metadata": {},
    "outputs": [],
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0dd3c72a",
    "metadata": {},
    "outputs": [],
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "17466699",
    "metadata": {},
    "outputs": [],
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "cfd8a2c7",
    "metadata": {},
    "outputs": [],
@@ -362,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "76c820fd",
    "metadata": {},
    "outputs": [],
@@ -386,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "b98ff68f",
    "metadata": {},
    "outputs": [],
@@ -410,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "92597672",
    "metadata": {},
    "outputs": [],
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "dcd03efd",
    "metadata": {},
    "outputs": [],
@@ -458,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "6a6ce6fb",
    "metadata": {},
    "outputs": [],
@@ -483,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "97b0bed6",
    "metadata": {},
    "outputs": [],
@@ -508,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "448d26b7",
    "metadata": {},
    "outputs": [],
@@ -533,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "b3df9d06",
    "metadata": {},
    "outputs": [],
@@ -558,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "961574d2",
    "metadata": {},
    "outputs": [],
@@ -583,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "a7946d78",
    "metadata": {},
    "outputs": [],
@@ -608,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "e868fe81",
    "metadata": {},
    "outputs": [],
@@ -641,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "f1c0e674",
    "metadata": {},
    "outputs": [],
@@ -666,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "aa451837",
    "metadata": {},
    "outputs": [],
@@ -691,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "00df75a0",
    "metadata": {},
    "outputs": [],
@@ -716,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "8a004f04",
    "metadata": {},
    "outputs": [],
@@ -741,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "f21f4b29",
    "metadata": {},
    "outputs": [],
@@ -766,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "f7a4fb19",
    "metadata": {},
    "outputs": [],
@@ -798,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "69828150",
    "metadata": {},
    "outputs": [],
@@ -823,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "6f0dd21e",
    "metadata": {},
    "outputs": [],
@@ -848,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "aaf30122",
    "metadata": {},
    "outputs": [],
@@ -873,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "7ff1487e",
    "metadata": {},
    "outputs": [],
@@ -898,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "85be63a8",
    "metadata": {},
    "outputs": [],
@@ -923,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "dece739b",
    "metadata": {},
    "outputs": [],
@@ -956,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "ef1ae1be",
    "metadata": {},
    "outputs": [],
@@ -969,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "f47148fe",
    "metadata": {},
    "outputs": [],
@@ -993,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "a98e3f0b",
    "metadata": {},
    "outputs": [],
@@ -1017,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "21a347a2",
    "metadata": {},
    "outputs": [],
@@ -1041,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "63baa118",
    "metadata": {},
    "outputs": [],
@@ -1065,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "6f72b747",
    "metadata": {},
    "outputs": [],
@@ -1089,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "5392fa2b",
    "metadata": {},
    "outputs": [],
@@ -1113,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "85d53bf6",
    "metadata": {},
    "outputs": [],
@@ -1137,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "ada6700b",
    "metadata": {},
    "outputs": [],
@@ -1161,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "2955840c",
    "metadata": {},
    "outputs": [],
@@ -1177,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "183c3fdf",
    "metadata": {},
    "outputs": [],
@@ -1193,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "f50a7932",
    "metadata": {},
    "outputs": [],
@@ -1209,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "cb86a3ec",
    "metadata": {},
    "outputs": [],
@@ -1227,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "ee8dd72a",
    "metadata": {},
    "outputs": [],
@@ -1251,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "9631285b",
    "metadata": {},
    "outputs": [],
@@ -1261,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "cb549ef8",
    "metadata": {},
    "outputs": [],
@@ -1271,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "e814db97",
    "metadata": {},
    "outputs": [],
@@ -1281,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "f3ff6fd9",
    "metadata": {},
    "outputs": [],
@@ -1291,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "1ec9206b",
    "metadata": {},
    "outputs": [],
@@ -1302,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "ed6ec1ca",
    "metadata": {},
    "outputs": [],
@@ -1312,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "5efbc7f3",
    "metadata": {},
    "outputs": [],
@@ -1322,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "6078f4ec",
    "metadata": {},
    "outputs": [],
@@ -1337,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "6eb39f55",
    "metadata": {},
    "outputs": [],
@@ -1347,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "8a2db0aa",
    "metadata": {},
    "outputs": [],
@@ -1367,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "60075194",
    "metadata": {},
    "outputs": [],
@@ -1377,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "8ea40652",
    "metadata": {},
    "outputs": [],
@@ -1392,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "91747424",
    "metadata": {},
    "outputs": [],
@@ -1412,7 +1413,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "black",
+   "display_name": ".stac",
    "language": "python",
    "name": "python3"
   },
@@ -1426,7 +1427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
