updating district info in lulc layer name

--- a/computing/STAC_specs/notebooks/final_flow.ipynb
+++ b/computing/STAC_specs/notebooks/final_flow.ipynb
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "3236da76",
    "metadata": {},
    "outputs": [],
@@ -575,8 +575,10 @@
     "        start_year = str(int(start_year) % 100) #keep only last 2 digits of the full year\n",
     "        end_year = str(int(end_year) % 100)\n",
     "        geoserver_layer_name = geoserver_layer_name.format(start_year = start_year,\n",
-    "                                                    end_year = end_year,\n",
-    "                                                    block = block)    \n",
+    "                                                           end_year = end_year,\n",
+    "                                                           block = block,\n",
+    "                                                           district = district\n",
+    "                                                           )    \n",
     "    # print(geoserver_workspace_name,geoserver_layer_name)\n",
     "    elif ((layer_name == 'tree_canopy_cover_density_raster') |\\\n",
     "          (layer_name == 'tree_canopy_height_raster')):\n",
